fix spacing, sizes and order for breakpoint s and xs, format code, delete doubled code

--- a/src/components/AboutSection/AboutSection.module.scss
+++ b/src/components/AboutSection/AboutSection.module.scss
@@ -49,31 +49,32 @@
 			button {
 				margin-top: pxToRem(51px);
 			}
-		}}
-
-		.secondRow {
-			width: 100%;
-			height: auto;
-			max-width: 1100px;
-			margin-top: pxToRem(140px);
-			display: -ms-grid;
-			display: grid;
-			justify-items: center;
-			-ms-grid-columns: 1fr 10px 1fr 10px 1fr;
-			grid-template-columns: 1fr 1fr 1fr;
-			row-gap: pxToRem(74px);
-			-webkit-column-gap: 10px;
-			-moz-column-gap: 10px;
-			column-gap: 10px;
 		}
-	
+	}
+
+	.secondRow {
+		width: 100%;
+		height: auto;
+		max-width: 1100px;
+		margin-top: pxToRem(140px);
+		display: -ms-grid;
+		display: grid;
+		justify-items: center;
+		-ms-grid-columns: 1fr 10px 1fr 10px 1fr;
+		grid-template-columns: 1fr 1fr 1fr;
+		row-gap: pxToRem(74px);
+		-webkit-column-gap: 10px;
+		-moz-column-gap: 10px;
+		column-gap: 10px;
+	}
 
 	@include breakpoint('l') {
 		padding-right: pxToRem(40px);
 	}
+
 	@include breakpoint('m') {
 		padding-right: pxToRem(15px);
-		.secondRow{
+		.secondRow {
 			justify-items: center;
 			-ms-grid-columns: 1fr 10px 1fr 10px;
 			grid-template-columns: 1fr 1fr;
@@ -83,6 +84,7 @@
 			column-gap: 10px;
 		}
 	}
+
 	@include breakpoint('s') {
 		.firstRow {
 			@include flexbox(column);
@@ -96,17 +98,22 @@
 
 			.firstRowRight {
 				width: 100%;
-				h2{max-width: 300px;}
+				h2 {
+					max-width: 300px;
+				}
 			}
 		}
-		.secondRow{
-			justify-items: center;
+	}
+
+	@include breakpoint('xs') {
+		.firstRow {
+			@include flexbox(column);
+		}
+
+		.secondRow {
+			justify-items: flex-start;
 			-ms-grid-columns: 1fr 10px;
-			grid-template-columns: 1fr ;
-			row-gap: pxToRem(74px);
-			-webkit-column-gap: 10px;
-			-moz-column-gap: 10px;
-			column-gap: 10px;
+			grid-template-columns: 1fr;
 		}
 	}
 }
