--- a/src/components/AboutTile/AboutTile.module.scss
+++ b/src/components/AboutTile/AboutTile.module.scss
@@ -50,7 +50,20 @@
 	@include breakpoint('m') {
 		max-width: 250px;
 	}
-	@include breakpoint('s') {
-		// max-width: 240px;
+	
+	@include breakpoint('xs') {
+		max-width: 319px;
+		width: 319px;
+		height: 330px;
+
+		.imgWrap {
+			width: 100px;
+			height: 100px;
+
+			img {
+				max-width: 48px;
+				max-height: 48px;
+			}
+		}
 	}
 }
